# unet-deep-learning-audio-denoising

./: README.md  audio_preprocess.py  dataload.py  main.py  pyproject.toml  test.py  unet_class.py  unet_model.py
audio_download_seg/: 01_audio_download.py  01_librispeech_segment.py
dataloader_utils/: data_loader.py
dataset_utils/: dataset.py
module_pilot_test/: 011_audio_test_visualize.py  012_unet_pilot_test.py  013_dataset_pilot_test.py  014_dataloader_pilot_test.py  readme.md
postprocess_utils/: audio_postprocess.py
preprocess_utils/: audio_preprocess.py
unet_modeling1/: 02_unet_model.py  03_test.py  readme.md
unet_modeling2/: 01_unet_model.py  02_test.py  readme.md
unet_module/: unet_class.py
unet_module2/: unet_class.py
updated/: readme.md
