[project]
name = "unet-project"
version = "0.1.0"
description = "U-Net Audio Spectrogram Segmentation"
requires-python = ">=3.12"
dependencies = [
    "albumentations",
    "librosa",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "scikit-learn",
    "segmentation-models-pytorch",
    "soundfile",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm"
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }